Added bootstrap and navbar

--- a/style/collabBookStyle.css
+++ b/style/collabBookStyle.css
@@ -14,7 +14,7 @@ body {
 
 .wrapper {
     width: 940px;
-    margin: 0px auto 20px auto;
+    margin: 50px auto 20px auto;
     border: 2px solid #000000;
     background-color: #ffffff;
 }
@@ -36,7 +36,7 @@ header h1{
 
 header h2{
     text-align: center; 
-    color: rgb(70, 138, 194);
+    color: rgba(75, 207, 250,1.0);
 }
 
 #firstSection img{
@@ -72,3 +72,28 @@ section.section2 h2{
     color: rgb(53, 47, 47);
 }
 
+#navigation {
+	opacity:0.8;
+	position: fixed;
+	top: 0;
+	background-color: rgba(87, 95, 207,1.0);
+	padding: 15px 15px;
+	z-index: 100;
+	width: 100%;
+}
+
+#navigation li {
+	padding: 0 10px;
+}
+
+#navigation li a {
+	color: white;
+}
+
+#navigation li a:hover {
+	color: #f5f6fa;
+}
+
+.navbar-brand {
+	color: white;
+}
