add some supports for different screen size

--- a/style/collabBookStyle.css
+++ b/style/collabBookStyle.css
@@ -13,7 +13,7 @@ body {
 }
 
 .wrapper {
-    width: 940px;
+    width: 70vw;
     margin: 50px auto 20px auto;
     border: 2px solid #f0e9e9;
     background-color: #ffffff;
@@ -43,8 +43,8 @@ header h2{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    height: 250px;
-    width: 400px;
+    width: 40vw;
+    height: auto;
 }
 
 #firstSection p{
@@ -91,9 +91,14 @@ section.section2 h2{
 }
 
 #navigation li a:hover {
-	color: #f5f6fa;
+	color: white;
 }
 
 .navbar-brand {
 	color: white;
+}
+
+.navbar-toggler {
+	background: url(../images/menu.png) center center no-repeat;
+	background-size: 70%;
 }
