--- a/style/collabBookStyle.css
+++ b/style/collabBookStyle.css
@@ -50,7 +50,7 @@ header h2{
     height: auto;
 }
 
-#initIdea img{
+#initial-idea img{
     display: block;
     margin-left: auto;
     margin-right: auto;
